# helion

./: .env.example  .gitignore  README.md  alembic.ini  clusters.json  coverity.yaml  data_flow_diagram.md  findings.json  helion-java-findings.json  helion-osv-findings.json  helion-semgrep-findings.json  helion-trivy-findings.json  java-vulns-main.json  juice-shop-results.json  openapi.json  reasoning_request.json  requirements-frozen.txt  requirements.txt  sample_findings.json  semgrep-results.json  vulnerableapp-results.json
alembic/: env.py
alembic/versions/: 20250219000000_initial_findings_table.py  20250219100000_add_cluster_summaries_table.py  20250219200000_drop_cluster_summaries.py  20250219300000_add_users_table.py  20250219400000_add_uploaded_files_table.py  20250219500000_drop_uploaded_files_table.py  20250222000000_add_upload_jobs_table.py  20250222000001_add_findings_job_and_user.py  (+3 more)
app/: __init__.py  main.py  retention.py
app/core/: __init__.py  config.py  (+2 more)
cluster_engine/: Cargo.toml  pyproject.toml
cluster_engine/src/: lib.rs
docs/: tool_integration.md
idir/: capture-files-log.txt  security-da-log.txt  security-da-timings.txt
scripts/: smoke_test_reasoning.py
tests/: test_client_epss.py  test_clustering.py  test_enrich_cluster_cvss.py  test_enrich_cluster_epss.py  test_enrichment_persist.py  test_jira_export.py  test_job_findings.py  test_llm_determinism.py  test_reasoning.py  test_retention.py  test_risk_tier.py  test_sarif_parser.py  test_ticket_generator.py
web/: .env.local.example  package-lock.json  package.json  tsconfig.tsbuildinfo
(+287 files in other folders)
